--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,3 +2,129 @@ body {
 	background-color: rgb(30,30,25);
 	margin: 0px;
 }
+
+canvas {
+	position: absolute;
+}
+
+div.container {
+	width: 100%;
+	height: 100%;
+}
+
+div.controlBar {
+	position: absolute;
+	width: 15%;
+/*	background: green;*/
+	bottom: 16px;
+	right: 16px;
+	top: 0px;
+	min-width: 150px;
+	max-width: 212px;
+}
+
+div.controls {
+	display: block;
+	position: absolute;
+	opacity: 80%;
+	width: 100%;
+	height: 60%;
+	top:20%;
+	background: #0f0f0f;
+}
+
+div.controlHolder {
+/*	opacity: 50%;*/
+	height: 50px;
+	display: block;
+	justify-content: center;
+	padding: 5px;
+}
+
+div.controlTop {
+	width:100%;
+}
+
+div.controlBot {
+	width:100%;
+	display:flex;
+}
+
+input.slider {
+	width:80%;
+	appearance: none;
+	background: grey;
+	border-width: 1px;
+	border-style: solid;
+	border-color: black;
+}
+
+input.slider::-webkit-slider-thumb {
+	appearance: none;
+	width: 25px;
+	height: 25px;
+	background: #04e0bc;
+}
+
+label.controlLabel {
+	color: white;
+	display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
+input.sliderValue {
+	width: 20%;
+	color: black;
+	display: flex; 
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+input.button {
+	width: 100%;
+	height: 25px;
+	display: flex;
+	justify-content: center;
+	font-size:  14px;
+	font-weight: bold;
+	background-color: #04e0bc; /* dark cyan */
+	margin-right: auto;
+	margin-left: auto;
+}
+
+input.hide {
+	width: 40px;
+	height: 25px;
+	display: block;
+	text-align: center;
+	position: absolute;
+	bottom: 5px;
+	right: 5px;
+}
+
+input.paint {
+	width: 48%;
+	height:50px;
+	display: inline-block;
+}
+
+input.print {
+	width: 95%;
+}
+
+h1.title {
+	color:white;
+	text-align: center;
+	margin-top:auto;
+	margin-bottom:auto;
+}
+
+input.color {
+	width:100%;
+	background: grey;
+	border-width: 1px;
+	border-style: solid;
+	border-color: black;
+}
